# Monster-Engine

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  imgui.ini
apps/sandbox/: CMakeLists.txt
apps/sandbox/src/: AppLayer.cpp  AppLayer.h  MathUtils.h  SampleUtilities.h  ThirdPersonLayer.cpp  ThirdPersonLayer.h  UILayer.h  main.cpp
apps/sandbox/src/InputSample/: InputSampleLayer.cpp  InputSampleLayer.h
apps/sandbox/src/event_sample/: EventSampleLayer.cpp  EventSampleLayer.h
apps/sandbox/src/event_sample/events/: Events.h
apps/sandbox/src/input_sample/: InputSampleLayer.cpp  InputSampleLayer.h
apps/sandbox/src/physics_sample/: PhysicsSampleLayer.cpp  PhysicsSampleLayer.h
apps/sandbox/src/third_person_game/: ThirdPersonLayer.cpp  ThirdPersonLayer.h  ThirdPersonUiLayer.h
assets/shaders/: RmlUi.frag  RmlUi.vert  basic.frag
assets/ui/: demo.rcss  demo.rml
assets/ui/third_person_game/: third_person_game.rcss  third_person_game.rml  ui_healthbar.rcss
docs/: Architecture.md  Wiki.md
engine/: CMakeLists.txt
engine/include/: Engine.h  se_pch.h
engine/include/engine/: Application.h  Camera.h  Event.h  ImGuiLayer.h  Input.h  InputHandler.h  Layer.h  Log.h  Mesh.h  MeshFactory.h  Renderer.h  Shader.h  Window.h
engine/include/engine/audio/: AudioEmitter.h  AudioManager.h
engine/include/engine/ecs/: Component.h  Components.h  Entity.h  RenderSystem.h  Scene.h  SimpleComponents.h
engine/include/engine/event/: ApplicationEvent.h  Event.h  InputEvents.h  KeyEvent.h  MouseEvent.h
engine/include/engine/input/: Input.h  InputManager.h  KeyCodes.h  MouseCodes.h
engine/include/engine/new_event_system/: EventBus.h  EventChannel.h  EventManager.cpp  EventManager.h  IEventChannel.h  InputEvents.h  NewApplicationEvents.h
engine/include/engine/physics/: BoxCollider.h  PhysicsDebugDraw.h  PhysicsManager.h  PhysicsSystem.h  PhysicsWorld.h  RigidbodyComponent.h
engine/include/engine/renderer/: Buffer.h  CameraController.h  FrameBuffer.h  GraphicsContext.h  Material.h  RenderCommand.h  SceneRenderer.h  VertexArray.h  renderer_v2.h  shader_v2.h
engine/include/engine/resources/: MaterialManager.h  MeshManager.h
engine/include/engine/ui/: Canvas.h  RmlUiInterfaces.h  RmlUiLayer.h
engine/include/engine/utils/: FilesHandler.h  GLUtils.cpp  GLUtils.h
engine/src/: Application.cpp  Camera.cpp  FrameBuffer.cpp  ImGuiLayer.cpp  Input.cpp  InputHandler.cpp  Layer.cpp  Log.cpp  Mesh.cpp  MeshFactory.cpp  Renderer.cpp  Shader.cpp  Window.cpp
engine/src/Renderer/: Buffer.cpp  CameraController.cpp  GraphicsContext.cpp  Material.cpp  RenderCommand.cpp  SceneRenderer.cpp  VertexArray.cpp  renderer_v2.cpp  shader_v2.cpp
engine/src/audio/: AudioManager.cpp
engine/src/ecs/: Entity.cpp  RenderSystem.cpp  Scene.cpp
engine/src/engine/ui/: Canvas.cpp  RmlUiInterfaces.cpp  RmlUiLayer.cpp
engine/src/input/: Input.cpp  InputManager.cpp
engine/src/physics/: Collider.cpp  PhysicsDebugDraw.cpp  PhysicsManager.cpp  PhysicsSystem.cpp  PhysicsWorld.cpp  RigidbodyComponent.cpp
engine/src/resources/: MaterialManager.cpp  MeshManager.cpp
scripts/: generate_visual_studio_files_and_build.bat  setup.sh
